[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
black = "^22.6"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
grpcio = "^1.42.0"
grpcio-tools = "^1.42.0"
pep8-naming = "^0.11.1"
pytest-github-actions-annotate-failures = "^0.1.7"
protobuf = "^3.20.2"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"
pystarport = { git = "https://github.com/crypto-com/pystarport.git", branch = "main" }
chainlibpy = "^2.2.0"

# manually upgrade to make hatchling build success in poetry2nix
pathspec = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
