[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0"
pytest-xdist = "^3.6"
flake8 = "^7.0"
black = "^24.3"
flake8-black = "^0.3"
flake8-isort = "^6.1"
grpcio = "^1.53.0"
grpcio-tools = "^1.42.0"
pep8-naming = "^0.13"
pytest-github-actions-annotate-failures = "^0.2"
protobuf = "^4.25"
pyyaml = "^6.0.2rc1"
python-dateutil = "^2.8"
pystarport = { git = "https://github.com/crypto-com/pystarport.git", branch = "main" }
chainlibpy = "^2.2.0"

# manually upgrade to make hatchling build success in poetry2nix
pathspec = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
