[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0"
pytest-xdist = "^3.5"
flake8 = "^7.0"
black = "^24.3"
flake8-black = "^0.3"
flake8-isort = "^6.1"
pep8-naming = "^0.13"
pytest-github-actions-annotate-failures = "^0.2"
protobuf = "^6.33"
pyyaml = "^6.0.2rc1"
python-dateutil = "^2.8"
pystarport = { git = "https://github.com/crypto-com/pystarport.git", branch = "main" }
grpcio = ">=1.42.0,<2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
