[tool.poetry]
name = "pystarport"
version = "0.1.1"
description = "Spawn local devnets for cosmos-sdk chains"
authors = ["huangyi <huang@crypto.com>"]
license = "Apache"
keywords = ["CRO", "blockchain", "crypto.com", "cosmos"]
readme = "README.md"
homepage = "https://github.com/crypto-org-chain/chain-main/tree/master/pystarport"
repository = "https://github.com/crypto-org-chain/chain-main"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
tomlkit = "^0.7.0"
jsonmerge = "^1.7.0"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"
durations = "^0.3.3"
supervisor = "^4.2.1"
docker = "^4.3.1"
bech32 = "^1.1.0"
multitail2 = "^1.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pystarport = "pystarport.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
