[tool.poetry]
name = "pystarport_integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.0"
pytest-xdist = "^1.34.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
pep8-naming = "^0.11.1"
pytest-github-actions-annotate-failures = "^0.1.1"
protobuf = "^3.13.0"
grpcio = "^1.33.2"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"
pystarport = "^0.2.1"
chainlibpy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
